# MUSTER

./: .buildinfo  .gitignore  LICENSE  README.md  api_referance.html  api_reference.html  cli_reference.html  genindex.html  index.html  installation.html  introduction.html  modules.html  noxfile.py  objects.inv  py-modindex.html  pymuster.cli.html  pymuster.core.html  pymuster.html  pyproject.toml  quickstart.html  search.html  searchindex.js
.github/workflows/: build_docs.yaml  publish_pypi.yaml  test.yaml
_sources/: cli_reference.rst.txt  index.rst.txt  installation.rst.txt  introduction.rst.txt  modules.rst.txt  pymuster.cli.rst.txt  pymuster.core.rst.txt  pymuster.rst.txt
docs/: api_referance.rst  api_reference.rst  cli_reference.rst  conf.py  index.rst  quickstart.rst
src/pymuster/: __init__.py  muster.py  muster_lin.npy  muster_lin.py
src/pymuster/cli/: cli.py
src/pymuster/core/: field_calculus.py  losses.py  utils.py
tests/: test_registration.py
