[tool.poetry]
name = "pymuster"
version = "0.1.2"
description = "A registration tool for medical images"
authors = ["Edvard Grødem <edvard.grodem@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/CRAI-OUS/MUSTER"
keywords = ["registration", "medical", "MRI", "CT", "PET", "SPECT", "non-rigid", "deformation"]

[tool.poetry.dependencies]
python = "^3.11, <3.13"
numpy = "^1.26.0"
alive-progress = "^3.1.4"
click = "^8.1.7"
torch = "2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
muster = 'pymuster.cli.cli:main'
