[tool.poetry]
name = "pymuster"
version = "0.1.10"
description = "A registration tool for longitudinal medical images"
authors = ["Edvard Grødem <edvard.grodem@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/CRAI-OUS/MUSTER"
keywords = ["registration", "medical", "MRI", "CT", "non-rigid", "deformation"]
packages = [{include = "pymuster", from = "src"}]


[tool.poetry.dependencies]
python = "^3.11, <3.13"
numpy = "^1.26.0"
alive-progress = "^3.1.4"
click = "^8.1.7"
torch = "^2.2.0"
scipy = "^1.7.3"

[tool.poetry.group.dev.dependencies]
nox = "^2023.4.22"
pytest = "^7.4.2"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^1.3.0"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
muster = 'pymuster.cli.cli:main'
